<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Aplication</string>
	<string name="add_new_product">Add new product</string>
	<string name="data_picker">Data picker</string>
	<string name="gallarey">Gallery</string>
	<string name="button">Button</string>
	<string name="your_word">Your word</string>
	<string name="title">Title</string>
	<string name="title_placeholder">Title placeholder</string>
	<string name="we_will_learn_how_to_find_and_update_content_programmatically_next_week">We will learn how to find and update content programmatically next week.</string>
	<string name="add">Add</string>
	<string name="no_notes" tools:ignore="TypographyEllipsis">No Notes...</string>
	<string name="add_new_word">add new word</string>
	<string name="json_data">JSON data</string>
	<string name="date_picker">Date picker</string>
	<string name="gallery">Gallery</string>
	<string name="welcome_to_my_application_n_here_we_go_n_be_ready_for_the_magic">Welcome to my application, \n Here we go \n Be ready for the magic</string>
	<string name="welcome_to">Welcome to selling App</string>
	<string name="this_is_sub_title">This is sub-title</string>
	<!--    <string name="create">Create</string>-->
	<string name="loading">Loading...</string>
	<string name="delete">Delete</string>
	<string name="edit">Edit</string>
	<string name="select_date">Select Date</string>
	<string name="apps_name">Spinner Example</string>
	<string name="favourite">Favourite</string>
	<string name="create">Create</string>
	<string name="meaning">Meaning</string>
	<string name="word">Word</string>
	<string name="validation">Validation</string>
	<string name="save">save</string>
	<string name="english">English</string>
	<string name="sign_up">Sign up</string>
	<string name="various">various</string>
	<string name="product_price">Price Product</string>
	<string name="product_name">Name Product</string>
	<string name="all">ALL</string>
	<string name="food">FOOD</string>
	<string name="technique">TECHNIQUE</string>
	<string name="clothing">CLOTHING</string>
	<string name="raw_material">RAW MATERIAL</string>
	<string name="category">category</string>
	<string name="data">data</string>
</resources>